fix dark mode

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,6 +72,7 @@ a {
 
   #heart {
     text-align: center;
+    color: #ff7f2a;
   }
 }
 
